name:                hzulip
version:             1.1.1.3
synopsis:            A haskell wrapper for the Zulip API.
description:         This a Zulip API wrapper for Haskell.
homepage:            https://github.com/yamadapc/hzulip
license:             GPL-2
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Pedro Tacla Yamada <tacla.yamada@gmail.com> 2014
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/yamadapc/hzulip.git

library
  exposed-modules:     Web.HZulip
                     , Web.HZulip.Types
  build-depends:       base 
                     , conduit
                     , stm 
                     , stm-conduit 
                     , http-client 
                     , http-client-tls
                     , http-types
                     , exceptions 
                     , mtl 
                     , transformers
                     , lens
                     , aeson 
                     , lens-aeson 
                     , bytestring 
                     , text 
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hzulip-spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Web.HZulip
                     , Web.HZulip.Types
                     , HZulipSpec
                     , HZulipTypesSpec
  hs-source-dirs:      src
                     , test
  build-depends:       base 
                     , async
                     , conduit 
                     , stm 
                     , stm-conduit 
                     , http-client
                     , http-client-tls
                     , http-types
                     , exceptions 
                     , mtl 
                     , transformers
                     , lens
                     , aeson
                     , scotty 
                     , lens-aeson
                     , bytestring
                     , hspec
                     , raw-strings-qq 
                     , text 
  default-language:    Haskell2010
