name:                zulip-bot-example
version:             0.1.0.0
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable zulip-bot-example
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , hzulip >= 0.3.0.0
  default-language:    Haskell2010
