name:                zulip-bot-examples
version:             0.1.0.0
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable zulip-echo-bot
  main-is:             ZulipEchoBot.hs
  build-depends:       base >=4 && <5
                     , hzulip >= 1.1.0.2
                     , lifted-async
                     , exceptions >=0.6
                     , mtl
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable zulip-logger
  main-is:             ZulipLogger.hs
  build-depends:       base >=4 && <5
                     , hzulip >= 1.1.0.2
                     , exceptions >=0.6
                     , mtl
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable zulip-cli
  main-is:             ZulipCli.hs
  build-depends:       base >=4 && <5
                     , ansi-terminal >=0.6 && <0.7
                     , split >=0.2 && <1
                     , lifted-async >=0.2 && <0.3
                     , terminal-size >=0.3 && <0.4
                     , hzulip >= 1.1.0.2
  hs-source-dirs:      src
  default-language:    Haskell2010

executable zulip-bot-conduit
  main-is:             ZulipConduitBot.hs
  build-depends:       base >=4 && <5
                     , hzulip >= 1.1.0.2
                     , conduit
                     , lifted-async
                     , exceptions >=0.6
                     , mtl
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
