name:                zulip-bot-examples
version:             0.1.0.0
synopsis:            Examples for hzulip
description:         hzulip bot examples; see the GitHub page
license:             GPL-2
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable zulip-echo-bot
  main-is:             ZulipEchoBot.hs
  build-depends:       base 
                     , hzulip 
                     , lifted-async
                     , exceptions 
                     , mtl
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable zulip-logger
  main-is:             ZulipLogger.hs
  build-depends:       base
                     , hzulip 
                     , exceptions 
                     , mtl
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable zulip-cli
  main-is:             ZulipCli.hs
  build-depends:       base 
                     , ansi-terminal 
                     , split 
                     , lifted-async 
                     , lifted-base
                     , terminal-size 
                     , hzulip 
  hs-source-dirs:      src
  default-language:    Haskell2010

executable zulip-bot-conduit
  main-is:             ZulipConduitBot.hs
  build-depends:       base 
                     , hzulip 
                     , conduit
                     , lifted-async
                     , exceptions 
                     , mtl
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
